--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -32,10 +32,22 @@ To host a web.
 
 ---
 
+# Network
+
+| **Command**   | **Description                |
+|---------------|------------------------------|
+| `netstat -rn` | Show all aviable networks    |
+
+---
+
 # Encoding and decoding
 
-- **base64**: to decode **-d**
-- **xxd**: hex, to encode **-p**, to decode **-p -r** 
+| **Command**        | **Description**   |
+| -------------------|-------------------|
+| `base64 STRING`    | Encode base64     |
+| `base64 -d STRING` | Decode base64     |
+| `xxd -p STRING`    | Encode hex        |
+| `xxd -p -r STRING` | Decode hex
 
 ---
 
@@ -46,40 +58,42 @@ zero@pio$ curl zeropio.github.io
 ```
 
 ### Flags
-- **-O**: download page
-- **-o**: specify file name
-- **-s**: silent request
-- **-k**: skip the certificate check for https
-- **-v**: verbose
-- **-vvv**: extra verbose
-- **-I**: only display the headers
-- **-i**: display headers and body
-- **-H**: set request headers
-- **-A**: set User-Agent
+
+| **Flag** | **Description**                |
+| ---------|--------------------------------|
+| `-O`     | download page                  |
+| `-o`     | specify file name              |
+| `-s`     | silent                         |
+| `-k`     | skip certificate check         |
+| `-v`     | verbose                        |
+| `-vvv`   | extra verbose                  |
+| `-I`     | only display headers           |
+| `-i`     | headers and body               |
+| `-H`     | set request headers            |
+| `-A`     | set User-Agent                 |
+| `-u`     | add authentication             |
+| `-X`     | specify method (GET, POST,...) |
+| `-d`     | send data                      |
+| `-L`     | follow redirections            |
+| `-b`     | send cookie                    |
+
 
 > **-I** send a **HEAD** request, while **-i** send a normal request and print the headers.
 {: .prompt-info}
 
+Some usages could be:
 ```console
 zero@pio$ curl zeropio.github.io -A 'Mozilla/5.0'
 ```
-
-- **-u**: add authentication.
 
 ```console
 zero@pio$ curl -u user:password http://zeropio.github.io/login
 zero@pio$ curl http://user:password@zeropio.github.io/login
 ```
 
-- **-X**: to specify the method (GET, POST,...)
-- **-d**: send data
-- **-L**: follow redirections
-
 ```console
 zero@pio$ curl -X POST -d 'user:password' https://zeropio.github.io/login/
 ```
-
-- **-b**: send cookie data 
 
 ### API
 
