--- a/_posts/notes/system/2022-04-25-shell.md
+++ b/_posts/notes/system/2022-04-25-shell.md
@@ -1,10 +1,10 @@
 ---
-title: Notes | Bash
+title: Notes | Shell
 author: Zeropio
 date: 2022-04-25
 categories: [Notes, System]
 tags: [bash, linux]
-permalink: /notes/system/bash
+permalink: /notes/system/shell
 ---
 
 # Reverse Shell
@@ -17,6 +17,16 @@ While in the attacker:
 ```console
 $ nc -lvnp <port$
 ```
+
+In [revshells](https://www.revshells.com/) we can find more.
+
+## Types
+
+| **Type** | **Description** |
+|----------|-----------------|
+| Reverse shell | Connection to a *listener* in the attacked machine |
+| Bind shell | Bind to a port in the attacked machine and waits for the connection |
+| Web shell | Runs commands via the web |
 
 ## weevely
 To generate a shell:
