--- a/_posts/notes/tools/2022-01-24-nmap.md
+++ b/_posts/notes/tools/2022-01-24-nmap.md
@@ -10,17 +10,38 @@ permalink: /notes/tools/nmap
 
 # Basic
 The more common options are:
-- **-sS**: do a stealth scan with TCP SYN
-- **-sU**: UDP scan
-- **-O**: detect the OS
-- **-sV**: provides services version
-- **-v** and **-vv**: increase the verbosity
-- **-Pn**: do not use ping
-- **-oN**: export the scan in a file
-- **-oA**: export the scan three major formats
-- **-A**: aggresive scan
-- **-p-**: scan **all** the ports
 
+| **Flag**   | **Description**    |
+|------------| --------------- |
+| `-sS`   | stealth scan   |
+| `-sU` | UDP scan |
+| `-O` | detect OS |
+| `-sV` | services version |
+| `-sC` | specify Nmap script |
+| `-v` `-vv` `-vvv` | verbosity |
+| `-Pn` | do not use ping |
+| `-oN` | export in a file |
+| `-oA` | export in three formats |
+| `-A` | aggressive scan (all) |
+| `-p-` | scan **all** ports |
+
+> `-sC` and `-sV` can be shortened as `-sVC`
+{: .prompt-tip }
+
+All the scripts are located in `/usr/share/nmap/scripts/`{: .filepath}.
+The syntax for running a script is:
+
+```console
+zero@pio$ nmap --script <script name> -p<port> <host>
+```
+
+For **Banner Grabbing** we can do:
+
+```console
+zero@pio$ nmap -sV --script=banner <target> 
+```
+
+---
 
 # Windows
 Because of many Windows machines slower the enumeration we can modify the scan:
@@ -29,6 +50,10 @@ $ nmap --min-rate 500 --open -vvv 192.168.0.1 -oN file
 ```
 
 Let's see each one:
-- **--min-rate** limit the size of the packets send to increase speed
-- **--open** show only open ports
-- **-vvv** verbose, so we can see the ports that have been descovering while the process.
+
+| **Flag** | **Description** |
+|----------|-----------------|
+| `--min-rate <number>` | limit the size of packets |
+| `--open` | only show open ports |
+
+
