--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -17,18 +17,54 @@ To create open http servers outside the LAN.
 
 ---
 
-# gobuster
-Wordlist: **/usr/share/wordlist/dirb/**
-
----
-
 # wpscan
 To scan for Wordpress vulnerabilities.
 
 ---
 
-# ngrok
-To host a web.
+# gobuster
+
+To find hidden directories by brute force. It can help with DNS, vhost, directory or AWS S3 buckets.
+
+## Directory
+
+To run the directory part we need to use *dir*. Let's use the **common.txt** wordlist.
+
+```console
+zero@pio$ gobuster dir -u http://<ip>/ -w /usr/share/dirb/wordlists/common.txt
+```
+
+| **Flag**   | **Description**    |
+|--------------- | --------------- |
+| `-u`   | URL   |
+| `-w`   | Path to the wordlist |
+
+> Check [HTTP](https://zeropio.github.io/notes/web/http) for a explanation on the status code.
+{: .prompt-tip }
+
+## DNS subdomain
+
+For this we need the option *dns*. Let's use the **SecLists** dictionary:
+
+```console
+zero@pio$ git clone https://github.com/danielmiessler/SecLists
+zero@pio$ sudo apt install seclists -y
+```
+
+---
+
+
+# Netcat
+
+Can be use for many purpose.
+
+A **Banner Grabbing** is a technique which a pentester can get information about a port:
+```console
+zero@pio$ netcat 127.0.0.1 22 
+  SSH-2.0-OpenSSH_8.4p1 Debian-3
+```
+> There is a netcat version for Windows: **PowerCat** 
+{: .prompt-tip }
 
 ---
 
