--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -22,37 +22,49 @@ To scan for Wordpress vulnerabilities.
 
 ---
 
-# gobuster
+# Web enumeration
 
-To find hidden directories by brute force. It can help with DNS, vhost, directory or AWS S3 buckets.
+## Whatweb
 
-## Directory
-
-To run the directory part we need to use *dir*. Let's use the **common.txt** wordlist.
+Whatweb can extract the version of web servers, supporting frameworks, and applications.
 
 ```console
-zero@pio$ gobuster dir -u http://<ip>/ -w /usr/share/dirb/wordlists/common.txt
+zero@pio$ whatweb <ip>
+zero@pio$ whatweb --no-errors <ip>/24
 ```
 
-| **Flag**   | **Description**    |
-|--------------- | --------------- |
-| `-u`   | URL   |
-| `-w`   | Path to the wordlist |
+## Certificates 
 
-> Check [HTTP](https://zeropio.github.io/notes/web/http) for a explanation on the status code.
-{: .prompt-tip }
+Seeing the web certificates can provides a wide range of information.
 
-## DNS subdomain
+## Robots.txt
 
-For this we need the option *dns*. Let's use the **SecLists** dictionary:
+This file is for web crawlers (like Googlebot) which pages should be indexed and which not. It can provides information about hidden pages, admin panels,...
+
+## Source code 
+
+Always check the source code with `[CTRL + u]`.
+ 
+---
+
+# Exploits
+
+## exploitdb
+
+After the installation we can search for specific exploitable versions:
 
 ```console
-zero@pio$ git clone https://github.com/danielmiessler/SecLists
-zero@pio$ sudo apt install seclists -y
+zero@pio$ sudo apt install exploitdb -y
+zero@pio$ searchsploit <service version>
+```
+
+To get the exploit:
+
+```console
+zero@pio$ searchsploit -p <number>
 ```
 
 ---
-
 
 # Netcat
 
@@ -70,7 +82,7 @@ zero@pio$ netcat 127.0.0.1 22
 
 # Network
 
-| **Command**   | **Description                |
+| **Command**   | **Description**                |
 |---------------|------------------------------|
 | `netstat -rn` | Show all aviable networks    |
 
