--- a/_posts/notes/system/2022-04-25-linux-pe.md
+++ b/_posts/notes/system/2022-04-25-linux-pe.md
@@ -15,7 +15,7 @@ permalink: /notes/system/linux-pe
 # Enumeration
 
 There are some useful tools like:
-- [LinEnum](https://github.com/rebootuser/LinEnum)
+- [LinEnum](https://raw.githubusercontent.com/rebootuser/LinEnum/master/LinEnum.sh)
 - [LinuxPrivChecker](https://github.com/sleventyeleven/linuxprivchecker)
 - [LinPEAS](https://github.com/carlospolop/PEASS-ng/tree/master/linPEAS)
 
