--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -181,4 +181,13 @@ zero@pio$ curl https://api.com/city/zeroland
   []
 ```
 
+---
 
+# Beautify
+
+## xmllint
+
+Usage:
+```console
+zero@pio$ curl http://<ip>/file.xml | xmllint --format -
+```
