--- a/_posts/notes/system/2022-07-14-windows.md
+++ b/_posts/notes/system/2022-07-14-windows.md
@@ -1,23 +1,238 @@
 ---
 title: Notes | Windows
 author: Zeropio
-date: 2021-12-31
+date: 2022-07-14
 categories: [Notes, System]
 tags: []
 permalink: /notes/system/windows
 ---
 
+# Fundamentals
+
+## Version
+
+| **OS Name**   | **Version number**    |
+|--------------- | --------------- |
+| Windows NT 4   | 4.0   |
+| Windows 2000	   | 5.0   |
+| Windows XP	   | 5.1   |
+| Windows Server 2003, 2003 R2 | 5.2   |
+| Windows Vista, Server 2008   | 6.0   |
+| Windows 7, Server 2008 R2	     | 6.1   |
+| Windows 8, Server 2012	       | 6.2   |
+| Windows 8.1, Server 2012 R2	 | 6.3   |
+| Windows 10, Server 2016, Server 2019	| 10.0 |
+
+We can check our version with:
+```console
+PS C:\zeropio> Get-WmiObject -Class win32_OperatingSystem | select Version,BuildNumber
+```
+
+## Permission
+
+The **Integrity Control Access Control List** (icacls) can see permissions and modify:
+```console
+C:\zeropio> icacls c:\windows
+c:\windows NT SERVICE\TrustedInstaller:(F)
+           NT SERVICE\TrustedInstaller:(CI)(IO)(F)
+           NT AUTHORITY\SYSTEM:(M)
+           NT AUTHORITY\SYSTEM:(OI)(CI)(IO)(F)
+           BUILTIN\Administrators:(M)
+           BUILTIN\Administrators:(OI)(CI)(IO)(F)
+           BUILTIN\Users:(RX)
+           BUILTIN\Users:(OI)(CI)(IO)(GR,GE)
+           CREATOR OWNER:(OI)(CI)(IO)(F)
+           APPLICATION PACKAGE AUTHORITY\ALL APPLICATION PACKAGES:(RX)
+           APPLICATION PACKAGE AUTHORITY\ALL APPLICATION PACKAGES:(OI)(CI)(IO)(GR,GE)
+           APPLICATION PACKAGE AUTHORITY\ALL RESTRICTED APPLICATION PACKAGES:(RX)
+           APPLICATION PACKAGE AUTHORITY\ALL RESTRICTED APPLICATION PACKAGES:(OI)(CI)(IO)(GR,GE)
+
+Successfully processed 1 files; Failed processing 0 files
+```
+
+| **Flag**   | **Meaning**    |
+|--------------- | --------------- |
+| `CI`   | container inherit   |
+| `OI`   | object inherit   |
+| `IO`   | inherit only   |
+| `NP`   | do not propagate inherit   |
+| `I`    | permission inherited from parent container |
+
+| **Flag**   | **Meaning**    |
+|--------------- | --------------- |
+| `F`   | full access   |
+| `D`   | delete access |
+| `N`   | no access   |
+| `M`   | modify access   |
+| `RX`  | read and execute access |
+| `R`   | read-only access |
+| `W`   | write-only access |
+
+We can change permissions with **icacl**:
+```console
+C:\zeropio> icacls c:\Users
+c:\Users NT AUTHORITY\SYSTEM:(OI)(CI)(F)
+         BUILTIN\Administrators:(OI)(CI)(F)
+         BUILTIN\Users:(RX)
+         BUILTIN\Users:(OI)(CI)(IO)(GR,GE)
+         Everyone:(RX)
+         Everyone:(OI)(CI)(IO)(GR,GE)
+
+Successfully processed 1 files; Failed processing 0 files
+C:\zeropio> icacls c:\users /grant zeropio:f
+C:\htb> >icacls c:\users
+c:\users WS01\zeropio:(F)
+         NT AUTHORITY\SYSTEM:(OI)(CI)(F)
+         BUILTIN\Administrators:(OI)(CI)(F)
+         BUILTIN\Users:(RX)
+         BUILTIN\Users:(OI)(CI)(IO)(GR,GE)
+         Everyone:(RX)
+         Everyone:(OI)(CI)(IO)(GR,GE)
+
+Successfully processed 1 files; Failed processing 0 files
+C:\zeropio> icacls c:\users /remove joe
+```
+
+More commands [here](https://ss64.com/nt/icacls.html).
+
+## Services
+
+Windows services are managed via the Service Control Manager (SCM) system, accessible via the **services.msc**. For example:
+```console
+PS C:\zeropio> Get-Service | ? {$_.Status -eq "Running"} | select -First 2 |fl
+```
+
+We can manage them with `sc`:
+
+- Query the service (even from other machines)
+```console
+C:\zeropio> sc qc <service>
+C:\zeropio> sc //<ip> query <service>
+```
+
+- Start and stop (need **administrator** privileges)
+```console
+C:\zeropio> sc stop <service>
+C:\zeropio> sc start <service>
+[SC] OpenService FAILED 5:
+
+Access is denied.
+
+C:\WINDOWS\system32> sc stop <service>
+```
+
+- Get security descriptor
+Security descriptors identify the object’s owner and a primary group containing a Discretionary Access Control List (**DACL**) and a System Access Control List (**SACL**). Generally, a DACL is used for controlling access to an object, and a SACL is used to account for and log access attempts.
+```console
+C:\zeropio> sc sdshow <service>
+D:(A;;CCLCSWRPLORC;;;AU)(A;;CCDCLCSWRPWPDTLOCRSDRCWDWO;;;BA)(A;;CCDCLCSWRPWPDTLOCRSDRCWDWO;;;SY)S:(AU;FA;CCDCLCSWRPWPDTLOSDRCWDWO;;;WD)
+```
+This amalgamation of characters crunched together and delimited by opened and closed parentheses is in a format known as the Security Descriptor Definition Language (**SDDL**).
+
+Let's see each character:
+**D: (A;;CCLCSWRPLORC;;;AU)**
+
+| **Character**   | **Description**    |
+|--------------- | --------------- |
+| `D:`   | DACL permissions   |
+| `AU:`   | security principal Authenticated Users   |
+| `A;;`   | access is allowed   |
+| `CC`   | SERVICE\_QUERY\_CONFIG, query to the service control manager (SCM) for the service configuration   |
+| `LC` | SERVICE\_QUERY\_STATUS, query to the service control manager (SCM) for the current status of the service |
+| `SW` | SERVICE\_ENUMERATE\_DEPENDENTS, it will enumerate a list of dependent services |
+| `RP` | SERVICE\_START, it will start the service |
+| `LO` | SERVICE\_INTERROGATE, it will query the service for its current status |
+| `RC` | READ\_CONTROL, it will query the security descriptor of the service |
+
+- Using PowerShell
+```console
+PS C:\zeropio> Get-ACL -Path HKLM:\System\CurrentControlSet\Services\<service> | Format-List
+```
+
+## LSASS
+
+Local Security Authority Subsystem Service (`lsass.exe`) is responsible for enforcing the security policy on Windows systems. For example, loggint attempts.
+
+## Sysinternals Tools
+
+The SysInternals Tools suite is a set of portable Windows applications that can be used to administer Windows systems (for the most part without requiring installation). The tools can be either downloaded from the Microsoft website or by loading them directly from an internet-accessible file share.
+
+```console
+C:\zeropio> \\live.sysinternals.com\tools\procdump.exe -accepteula
+```
+
+It has some tools as:
+- Process Explorer
+- Task Manager 
+- Process Monitor
+- TCPView
+- PSExec
+
+## Command Line
+
+### cmd
+The Command Prompt is the "Windows Shell". Locate in `C:\Windows\system32\cmd.exe`{: .filepath}. Some helpful commands:
+```console
+C:\zeropio> help
+C:\zeropio> help ipconfig
+C:\zeropio> ipconfig /?
+```
+
+### PowerShell
+> Windows PowerShell is a command shell that was designed by Microsoft to be more geared towards system administrators. 
+{: .prompt-info }
+
+#### cmdlets
+PowerShell uses **cmdlets**, which are small single-function tools built into the shell. Their syntax is **Verb-Noun**, for example:
+- **Get-ChildItem** list our current directory
+  - **Get-ChildItem -** to iterate through the arguments
+  - **Get-ChildItem -Recurse** will show us the contents of our current working directory and all subdirectories
+  - **Get-ChildItem -Path <path>** to get the contents of another directory
+  - **Get-ChildItem -Path <path> -Recurse**
+
+#### aliases
+Many cmdlets have aliases: **Set-Location** -> **cd**/**sl**. Or **Get-ChildItem** -> **ls**/**cgi**.
+We can view all with `Get-Alias`. Or set new with `New-Alias`:
+```console
+PS C:\zeropio> New-Alias -Name "Show-Files" Get-ChildItem
+```
+
+#### Running scripts
+The **PowerShell ISE** (Integrated Scripting Environment) allows user to write scripts. For example:
+```console
+PS C:\zeropio> .\PowerView.ps1;Get-LocalGroup | fl
+```
+We can import the scripts to our session:
+```console
+PS C:\zeropio> Import-Module .\PowerView.ps1
+```
+
+#### Execution Policy 
+
+Sometimes we will find that we are unable to run scripts on a system. This is due to a security feature that attempts to prevent the execution of malicious scripts called the execution policy. The possible policies are:
+| **Policy**   | **Description**    |
+|--------------- | --------------- |
+| **AllSigned**   | All scripts can run, but a trusted publisher must sign scripts and configuration files   |
+| **Bypass**   | No scripts or configuration files are blocked, and the user receives no warnings or prompts   |
+| **Default**   | This sets the default execution policy, Restricted for Windows desktop machines and RemoteSigned for Windows servers   |
+| **RemoteSigned**   | Scripts can run but requires a digital signature on scripts that are downloaded from the internet   |
+| **Restricted** | This allows individual commands but does not allow scripts to be run |
+| **Undefined** | No execution policy is set for the current scope |
+| **Unrestricted** | This is the default execution policy for non-Windows computers, and it cannot be changed |
+
+---
+
+# Penetration Distro
+
 To create an Pentesting Windows Distro we will need:
 - [ISO](https://developer.microsoft.com/en-us/windows/downloads/virtual-machines/)
 - [Chocolatey](https://chocolatey.org/)
 
----
-
-# Updates
+## Updates
 
 Let's change our updates policies:
 
-## Execution policy
+### Execution policy
 
 ```console
 PS C:\zeropio> Get-ExecutionPolicy -List
@@ -48,7 +263,7 @@ CurrentUser Undefined
 LocalMachine Undefined
 ```
 
-## PSWindowsUpdate
+### PSWindowsUpdate
 
 ```console
 PS C:\zeropio> Install-Module PSWindowsUpdate 
@@ -73,7 +288,7 @@ X ComputerName Result KB Size Title
 PS C:\zeropio> Restart-Computer -Force
 ```
 
-## Chocolatey
+### Chocolatey
 
 To install it:
 ```console
@@ -87,10 +302,9 @@ PS C:\zeropio> choco info vscode
 PS C:\zeropio> choco install python vscode git wsl2 openssh openvpn 
 ```
 
-## Adding exclusions
+### Adding exclusions
 
 ```console
 PS C:\zeropio> Add-MpPreference -ExclusionPath "C:\Users\your user here\AppData\Local\Temp\chocolatey\"
 ```
-
 
