--- a/_posts/notes/system/2022-07-14-windows.md
+++ b/_posts/notes/system/2022-07-14-windows.md
@@ -111,6 +111,7 @@ C:\zeropio> sc //<ip> query <service>
 ```
 
 - Start and stop (need **administrator** privileges)
+
 ```console
 C:\zeropio> sc stop <service>
 C:\zeropio> sc start <service>
@@ -167,6 +168,7 @@ It has some tools as:
 - Process Monitor
 - TCPView
 - PSExec
+- Active Directory Explorer
 
 ## Command Line
 
@@ -210,6 +212,7 @@ PS C:\zeropio> Import-Module .\PowerView.ps1
 #### Execution Policy 
 
 Sometimes we will find that we are unable to run scripts on a system. This is due to a security feature that attempts to prevent the execution of malicious scripts called the execution policy. The possible policies are:
+
 | **Policy**   | **Description**    |
 |--------------- | --------------- |
 | **AllSigned**   | All scripts can run, but a trusted publisher must sign scripts and configuration files   |
@@ -219,6 +222,49 @@ Sometimes we will find that we are unable to run scripts on a system. This is du
 | **Restricted** | This allows individual commands but does not allow scripts to be run |
 | **Undefined** | No execution policy is set for the current scope |
 | **Unrestricted** | This is the default execution policy for non-Windows computers, and it cannot be changed |
+
+We can check all with:
+```console
+PS C:\zeropio> Get-ExecutionPolicy -List
+```
+
+## Windows Security
+
+### Security Identifier
+
+The **SID** is a unique string for each user to identify all actions that the user is authorized to take. A SID consists of the Identifier Authority and the Relative ID (RID). In an Active Directory (AD) domain environment, the SID also includes the domain SID.
+It has the following pattern:
+```
+(SID)-(revision level)-(identifier-authority)-(subauthority1)-(subauthority2)-(etc)
+```
+
+| **String**   | **Description**    |
+|--------------- | --------------- |
+| **SID**   | Identifies the string as a SID   |
+| **Revision Level**   | To date, this has never changed and has always been 1   |
+| **Identifier-authority**   | A 48-bit string that identifies the authority (the computer or network) that created the SID   |
+| **Subauthority1**   | This is a variable number that identifies the user's relation or group described by the SID to the authority that created it, It tells us in what order this authority created the user's account   |
+| **Subauthority2** | Tells us which computer (or domain) created the number |
+| **Subauthority3** | he RID that distinguishes one account from another, tells us whether this user is a normal user, a guest, an administrator, or part of some other group |
+
+### SAM and ACE 
+
+SAM (Security Accounts Manager) grants rights to a network to execute specific processes. The access rights themselves are managed by Access Control Entries (ACE) in Access Control Lists (ACL). The ACLs contain ACEs that define which users, groups, or processes have access to a file or to execute a process, for example.
+There are two types of ACLs: Discretionary Access Control List (DACL) or System Access Control List (SACL).
+
+### UAC
+
+User Account Control prevent malware from running or manipulating processes that could damage the computer or its contents. Since the installation requires administrator rights, a window pops up, asking you if you want to confirm the installation. With a standard user who has no rights for the installation, execution will be denied, or you will be asked for the administrator password. This consent prompt interrupts the execution of scripts or binaries that malware or attackers try to execute until the user enters the password or confirms execution. 
+
+### Registry
+
+Is a hierarchical database in Windows critical for the operating system. It stores low-level settings for the Windows operating system and applications that choose to use it.
+It can be open typing `regedit` (cmd or Windows search bar).
+
+[This](https://docs.microsoft.com/en-us/windows/win32/sysinfo/registry-value-types) are the registry values types.
+
+Each folder under Computer is a key. The root keys all start with HKEY. A key such as HKEY-LOCAL-MACHINE is abbreviated to **HKLM**. HKLM contains all settings that are relevant to the local system. This root key contains six subkeys like SAM, SECURITY, SYSTEM, SOFTWARE, HARDWARE, and BCD, loaded into memory at boot time (except HARDWARE which is dynamically loaded).
+You can find these files under `C:\Windows\System32\Config\`{: .filepath}.
 
 ---
 
