--- a/_posts/notes/system/2022-07-15-services.md
+++ b/_posts/notes/system/2022-07-15-services.md
@@ -55,7 +55,7 @@ To check the Samba with Nmap:
 zero@pio$ nmap --script smb-os-discovery.nse -p<port> <ip>
 ```
 
-# Connection
+## Connection
 
 Samba share folders and files. We can try connecting to it with **smbclient**.
 
@@ -90,7 +90,7 @@ To connect as a user:
 zero@pio$ smbclient -U <user> \\\\<ip>\\<folder>
 ```
 
-# Commands
+## Commands
 
 | **Command**   | **Description**    |
 |--------------- | --------------- |
