--- a/_posts/notes/system/2022-07-14-windows.md
+++ b/_posts/notes/system/2022-07-14-windows.md
@@ -189,8 +189,8 @@ PowerShell uses **cmdlets**, which are small single-function tools built into th
 - **Get-ChildItem** list our current directory
   - **Get-ChildItem -** to iterate through the arguments
   - **Get-ChildItem -Recurse** will show us the contents of our current working directory and all subdirectories
-  - **Get-ChildItem -Path <path>** to get the contents of another directory
-  - **Get-ChildItem -Path <path> -Recurse**
+  - **Get-ChildItem -Path \<path\>** to get the contents of another directory
+  - **Get-ChildItem -Path \<path\> -Recurse**
 
 #### aliases
 Many cmdlets have aliases: **Set-Location** -> **cd**/**sl**. Or **Get-ChildItem** -> **ls**/**cgi**.
