--- a/_posts/notes/system/2022-07-15-services.md
+++ b/_posts/notes/system/2022-07-15-services.md
@@ -27,6 +27,7 @@ $ ssh -i id_rsa user@ip
 ---
 
 # FTP 
+File Transfer Protocol (FTP) is an Application Layer protocol that enables quick data transfer between computing devices. 
 
 To perform a basic connection to a FTP:
 
