--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -85,6 +85,7 @@ zero@pio$ netcat 127.0.0.1 22
 | **Command**   | **Description**                |
 |---------------|------------------------------|
 | `netstat -rn` | Show all aviable networks    |
+| `sudo sh -c 'echo "<ip>  <domain>" >> /etc/hosts'` | Fast add to /etc/hosts |
 
 ## tcpdump
 Tcpdump is a command-line packet sniffer that can directly capture and interpret data frames from a file or network interface. It was built for use on any Unix-like operating system and had a Windows twin called WinDump (deprecated).
