--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -7,18 +7,10 @@ tags: [tool]
 permalink: /notes/tools/commands
 ---
 
-# hash-identifier
-
----
-
-# Ngrok
-To create open http servers outside the LAN.
-[Link](https://ngrok.com/)
-
----
-
-# wpscan
-To scan for Wordpress vulnerabilities.
+# General
+- **hash-identifier**
+- **Ngrok**: To create open http servers outside the LAN ([link](https://ngrok.com/)).
+- **wpscan**: To scan for Wordpress vulnerabilities.
 
 ---
 
