--- a/_posts/notes/web/2022-05-09-fuzzing.md
+++ b/_posts/notes/web/2022-05-09-fuzzing.md
@@ -69,7 +69,7 @@ dirsearch -r -u http://{ip}/ -w /usr/share/wordlists/dirbuster/directory-list-2.
 
 # ffuf
 
-## Installation:
+## Installation
 ```console
 zero@pio$ sudo apt install ffuf -y
 ```
@@ -87,6 +87,9 @@ zero@pio$ sudo apt install ffuf -y
 | -e   | `-e .<extension>`   | Extensions to check  |
 | -v   | `-v`   | Verbose  |
 | -fs | `-fs <parameter>,<parameter>,...` | Skip parameter |
+| -H | `-H "<Name>: <Value>"` | Adds header to the request |
+| -X | `-X <method>` | HTTP method |
+| -d | `-d <data>` | POST data |
 
 ### Directory 
 
@@ -101,6 +104,7 @@ We need to place `FUZZ` where we want to fuzz.
 - `/usr/share/SecLists/Discovery/Web-Content/directory-list-2.3-small.txt`{: .filepath}
 - `/usr/share/SecLists/Discovery/Web-Content/web-extensions.txt`{: .filepath}
 - `/usr/share/SecLists/Discovery/DNS/subdomains-top1million-5000.txt`{: .filepath}
+- `/usr/share/SecLists/Discovery/Web-Content/burp-parameter-names.txt`{: .filepath}
 
 ### Page 
 
@@ -136,6 +140,30 @@ zero@pio$ ffuf -w <wordlist>:FUZZ -u http://<domain>/ -H 'Host: FUZZ.<domain>'
 
 Usually we can get many fake 200 status code. A good practice would be making a filter with all the same code. For example, is we get in all of them `Size: 986`, we can eliminate this false positive entries adding `-fs 986`.
 
+### Parameter 
 
+- GET 
 
+```console
+zero@pio$ ffuf -w <wordlist>:FUZZ -u http://<domain>/query.php?FUZZ=key -fs xxx
+```
+> We will get many results back, so we will filter out the default response size we are getting
+{: .prompt-tip }
 
+- POST 
+
+```console
+zero@pio$ ffuf -w <wordlist>:FUZZ -u http://<domain>/ -d 'FUZZ=key' -H 'Content-Type: application/x-www-form-urlencoded' -fs xxx
+```
+
+### Value 
+
+In some cases we need to create our own wordlist. We can make a simple one like:
+```console
+zero@pio$ for i in $(seq 1 1000); do echo $i >> ids.txt; done
+```
+
+Now let's pass this list to value with POST:
+```console
+zero@pio$ ffuf -w ids.txt:FUZZ -u http://<domain>/ -X POST -d 'id=FUZZ' -H 'Content-Type: application/x-www-form-urlencoded' -fs xxx
+```
