--- a/_posts/notes/web/2022-05-09-fuzzing.md
+++ b/_posts/notes/web/2022-05-09-fuzzing.md
@@ -91,7 +91,7 @@ zero@pio$ sudo apt install ffuf -y
 | -X | `-X <method>` | HTTP method |
 | -d | `-d <data>` | POST data |
 
-### Directory 
+## Directory 
 
 ```console
 zero@pio$ ffuf -w <SNIP> -u http://<ip>/FUZZ
@@ -99,14 +99,14 @@ zero@pio$ ffuf -w <SNIP> -u http://<ip>/FUZZ
 
 We need to place `FUZZ` where we want to fuzz.
 
-### Useful wordlist
+## Useful wordlist
 
 - `/usr/share/SecLists/Discovery/Web-Content/directory-list-2.3-small.txt`{: .filepath}
 - `/usr/share/SecLists/Discovery/Web-Content/web-extensions.txt`{: .filepath}
 - `/usr/share/SecLists/Discovery/DNS/subdomains-top1million-5000.txt`{: .filepath}
 - `/usr/share/SecLists/Discovery/Web-Content/burp-parameter-names.txt`{: .filepath}
 
-### Page 
+## Page 
 
 - Extension fuzzing 
 
@@ -120,19 +120,19 @@ zero@pio$ ffuf -w <wordlist>:FUZZ -u http://<ip>/indexFUZZ
 zero@pio$ ffuf -w <wordlist>:FUZZ -u http://<ip>/FUZZ.php
 ```
 
-### Recursive 
+## Recursive 
 
 ```console
 zero@pio$ ffuf -w <wordlist>:FUZZ -u http://<ip>/FUZZ -recursion -recursion-depth 1 -e .php -v
 ```
 
-### Subdomain 
+## Subdomain 
 
 ```console
 zero@pio$ ffuf -w <wordlist>:FUZZ -u https://FUZZ.<domain>/
 ```
 
-### Vhosts 
+## Vhosts 
 
 ```console
 zero@pio$ ffuf -w <wordlist>:FUZZ -u http://<domain>/ -H 'Host: FUZZ.<domain>'
@@ -140,7 +140,7 @@ zero@pio$ ffuf -w <wordlist>:FUZZ -u http://<domain>/ -H 'Host: FUZZ.<domain>'
 
 Usually we can get many fake 200 status code. A good practice would be making a filter with all the same code. For example, is we get in all of them `Size: 986`, we can eliminate this false positive entries adding `-fs 986`.
 
-### Parameter 
+## Parameter 
 
 - GET 
 
@@ -156,7 +156,7 @@ zero@pio$ ffuf -w <wordlist>:FUZZ -u http://<domain>/query.php?FUZZ=key -fs xxx
 zero@pio$ ffuf -w <wordlist>:FUZZ -u http://<domain>/ -d 'FUZZ=key' -H 'Content-Type: application/x-www-form-urlencoded' -fs xxx
 ```
 
-### Value 
+## Value 
 
 In some cases we need to create our own wordlist. We can make a simple one like:
 ```console
