--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -360,6 +360,11 @@ listening on eth0, link-type EN10MB (Ethernet), snapshot length 262144 bytes
 | `xxd -p STRING`    | Encode hex        |
 | `xxd -p -r STRING` | Decode hex
 
+| **Command**    | **Usage**    | **Description**    |
+|---------------- | --------------- | --------------- |
+| `gunzip`   | `gunzip -S .zip <zip file>`    | Decompress zip file without `unzip`    |
+
+
 ---
 
 # cURL
