--- a/_posts/notes/web/2022-05-09-fuzzing.md
+++ b/_posts/notes/web/2022-05-09-fuzzing.md
@@ -105,6 +105,8 @@ We need to place `FUZZ` where we want to fuzz.
 - `/usr/share/SecLists/Discovery/Web-Content/web-extensions.txt`{: .filepath}
 - `/usr/share/SecLists/Discovery/DNS/subdomains-top1million-5000.txt`{: .filepath}
 - `/usr/share/SecLists/Discovery/Web-Content/burp-parameter-names.txt`{: .filepath}
+- `/usr/share/SecLists/Fuzzing/LFI/LFI-Jhaddix.txt{: .filepath}`
+- `/usr/share/SecLists/Discovery/Web-Content/default-web-root-directory-linux.txt`{: .filepath}
 
 ## Page 
 
