--- a/_posts/notes/tools/2021-12-27-dorks.md
+++ b/_posts/notes/tools/2021-12-27-dorks.md
@@ -4,7 +4,7 @@ author: Zeropio
 date: 2021-12-27
 categories: [Notes, Tools]
 tags: [dorks]
-permalink: /notes/web/dorks
+permalink: /notes/tools/dorks
 ---
 
 
