--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -72,6 +72,18 @@ zero@pio$ netcat 127.0.0.1 22
 
 ---
 
+# Compilation 
+
+## gcc
+
+To compile a C program:
+```console
+zero@pio$ gcc <script>.c -o <output file>
+zero@pio$ chmod +x <output file>
+```
+
+---
+
 # Network
 
 | **Command**   | **Description**                |
