--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -463,6 +463,19 @@ zero@pio$ curl https://api.com/city/zeroland
 
 ---
 
+# Other 
+
+## Enviroments 
+
+We can create different enviroments with Python:
+```console
+zero@pio$ pip install virtualenv 
+zero@pio$ virtualenv -p python2 <NAME>
+zero@pio$ source <NAME>/bin/activate
+```
+
+---
+
 # Beautify
 
 ## xmllint
