--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -465,6 +465,14 @@ zero@pio$ curl https://api.com/city/zeroland
 
 # Other 
 
+## /etc/hosts 
+
+To quickly write on the `/etc/hosts`{: .filepath}:
+```console
+zero@pio$ IP=<TARGET>
+zero@pio$ printf "%s\t%s\n\n" "$IP" "<DOMAIN>" | sudo tee -a /etc/hosts
+```
+
 ## Enviroments 
 
 We can create different enviroments with Python:
