--- a/_posts/notes/tools/2022-04-24-commands.md
+++ b/_posts/notes/tools/2022-04-24-commands.md
@@ -490,5 +490,12 @@ zero@pio$ source <NAME>/bin/activate
 
 Usage:
 ```console
-zero@pio$ curl http://<ip>/file.xml | xmllint --format -
+zero@pio$ curl http://<TARGET>/file.xml | xmllint --format -
+```
+
+## html2text 
+
+Usage:
+```console
+zero@pio$ curl http://<TARGET> | html2text
 ```
