--- a/_posts/notes/system/2022-07-15-services.md
+++ b/_posts/notes/system/2022-07-15-services.md
@@ -35,6 +35,16 @@ To perform a basic connection to a FTP:
 zero@pio$ ftp <ip>
 ```
 
+We can download all the aviables file in a system with:
+```console
+zero@pio$ wget -m --no-passive ftp://<USER>:<PASSWORD>@<IP>
+```
+
+With the **PUT** command, we can upload files in the current folder to the FTP server:
+```console
+ftp> put <FILE>
+```
+
 Inside, basic commands can be use:
 
 | **Command**   | **Description**    |
@@ -43,6 +53,8 @@ Inside, basic commands can be use:
 | `cd`   | Change directory   |
 | `get <file>`   | Download file in our machine   |
 | `exit`   | Exit the FTP   |
+
+A full command list [here](https://www.smartfile.com/blog/the-ultimate-ftp-commands-list/), with a list of the status [here](https://en.wikipedia.org/wiki/List_of_FTP_server_return_codes).
 
 ---
 
