--- a/_posts/notes/tools/2022-01-24-nmap.md
+++ b/_posts/notes/tools/2022-01-24-nmap.md
@@ -155,6 +155,11 @@ Nmap Scripting Engine (**NSE**) provides us with the possibility to create scrip
 | **version** | Extension for service detection. |
 | **vuln** | Identification of specific vulnerabilities. |
 
+First, update the scripts:
+```console
+zero@pio$ sudo nmap --script-updatedb
+```
+
 To run default scripts:
 ```console
 zero@pio$ sudo nmap -sC <ip>
